--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-grequests
-numpy
+grequests==3.0.4
+numpy==1.16.3
 requests==2.21.0
 pymongo==3.7.2
 typing==3.6.6
 Flask==1.0.2
 coincurve==11.0.0
-dnspython
+dnspython==1.16.0
+uclcoin==0.3.2
