--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ gevent==1.4.0
 grequests==0.3.0
 numpy==1.16.3
 uclcoin==0.3.2
+pylibmc==1.5.2
+click==6.7
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+Werkzeug==0.14.1
